# model-forge

./: .gitignore  AGENTS.md  README.md  forge  pyproject.toml
configs/: README.md  hub.yaml  research_registry.yaml
datasets/: README.md
docker/: abliterix.Dockerfile  apostate.Dockerfile  heretic.Dockerfile  modelopt-nvfp4.Dockerfile  obliteratus.Dockerfile  posttrain-transformers5.Dockerfile
docs/: README.md  abliteration.md  adding-model-family.md  agent-experiments.md  artifact-retention.md  artifact-validation.md  cluster.md  dgx-spark.md  evaluation-strategy.md  experiment-ledger.md  finetuning.md  huggingface-publishing.md  kernel-benchmarks.md  model_forge_sota_roadmap_2026-05-18_with_huggingface.md  profiling.md  quantization.md  roadmap-status-audit.md  run-manifests.md  serving-benchmarks.md  spark-optimizations.md  status.md  upstream-prs.md  validation-scope.md  variant-graph.md
models/: README.md
pipelines/: README.md
recipes/: README.md
reports/: README.md  qwen36_27b_abliterix_aeon_component_v27_plan_summary.md  qwen36_27b_abliterix_harmfulness_component_v28_plan_summary.md  qwen36_27b_abliterix_harmfulness_component_v29_plan_summary.md  qwen36_27b_abliterix_response_opening_v26_plan_summary.md  qwen36_27b_assistant_prefix_projection_v23_targeted_summary.md  qwen36_27b_checkpoint_blend_v2_v12_alpha1p25_targeted_summary.md  qwen36_27b_ft_abli_v2_candidate_gate_summary.md  qwen36_27b_generated_token_selective_projection_v31_plan_summary.md  qwen36_27b_late_nearmiss_score_distilled_repair_v5_report.json  qwen36_27b_late_nearmiss_self_harm_direct_opening_repair_v3_report.json  qwen36_27b_late_nearmiss_self_harm_eval_repair_v2_report.json  qwen36_27b_late_nearmiss_self_harm_sampled_opening_repair_v4_report.json  qwen36_27b_lm_head_refusal_token_patch_v25_targeted_summary.md  qwen36_27b_local_ft_v4_nvfp4_modelopt_serving_validation_summary.md  qwen36_27b_local_ft_v4_nvfp4_public_release_review.md  qwen36_27b_method_shift_self_harm_selected_targeted_summary.md  qwen36_27b_model_selection_scoring_v9_summary.md  qwen36_27b_multi_run_self_harm_eval_repair_v1_report.json  qwen36_27b_native_som_sra_v52_targeted_summary.md  qwen36_27b_native_sra_v49_plan_summary.md  qwen36_27b_native_sra_v50_targeted_summary.md  qwen36_27b_native_sra_v51_targeted_summary.md  qwen36_27b_norm_projection_v16_self_harm_opening_summary.md  qwen36_27b_obliteratus_lora_adapter_v45_plan_summary.md  qwen36_27b_obliteratus_lora_attn_output_v46_plan_summary.md  qwen36_27b_obliteratus_lora_late_attn_output_v47_plan_summary.md  qwen36_27b_obliteratus_lora_target_layer_activation_v48_plan_summary.md  qwen36_27b_obliteratus_rdo_cuda_v33_plan_summary.md  qwen36_27b_qwen_scope_sae_v21_targeted_summary.md  qwen36_27b_response_opening_generated_projection_v32_plan_summary.md  qwen36_27b_response_opening_hybrid_projection_v34_plan_summary.md  qwen36_27b_response_opening_refusal_phrase_projection_v35_plan_summary.md  qwen36_27b_response_opening_residual_phrase_projection_v36_plan_summary.md  qwen36_27b_selective_projection_v22_targeted_summary.md  qwen36_27b_som_projection_v17_self_harm_opening_summary.md  qwen36_27b_som_projection_v18_should_not_opening_summary.md  qwen36_27b_som_projection_v19_unmatched_refusal_style_summary.md  qwen36_27b_som_projection_v20_hybrid_attention_summary.md  qwen36_27b_source_anchored_concept_cone_v37_plan_summary.md  (+34 more)
scripts/: README.md  blend_safetensors_checkpoints.py  convert_obliteratus_lora_to_peft.py  dgx_spark_artifact_eval_gemma4_26b_a4b.sh  dgx_spark_artifact_eval_qwen35_9b.sh  dgx_spark_build_vllm.sh  dgx_spark_full_eval_gemma4_26b_a4b.sh  dgx_spark_full_eval_qwen35_9b.sh  dgx_spark_serve_gemma4_26b_a4b.sh  dgx_spark_serve_qwen.sh  dgx_spark_serve_qwen35_9b.sh  dgx_spark_smoke_eval_gemma4_26b_a4b.sh  dgx_spark_smoke_eval_qwen35_9b.sh  download_gemma4_models.sh  gemma4_dgx.sh  merge_peft_adapter.py  mock_openai_server.py  model_forge_dgx.py  model_forge_watchdog.py  patch_lm_head_tokens_checkpoint.py  publish_hf_artifact.py  remap_safetensors_checkpoint.py  rescore_internal_eval.py  run_abliterix_search_container.sh  run_apostate_container.sh  run_base_eval.sh  run_dgx_spark_eval.sh  run_finetune_spark_container.sh  run_heretic_direct_container.sh  run_in_container.sh  run_merge_peft_container.sh  run_native_checkpoint_container.sh  run_native_checkpoint_scope.sh  run_obliteratus_container.sh  scale_lora_adapter.py  serve_teacher_vllm_dgx_spark.sh  serve_vllm_dgx_spark.sh  setup.sh  source_tether_safetensors_checkpoint.py
tests/: test_abliteration_pipeline.py  test_agents.py  test_artifact_validation.py  test_behavior_scorecard.py  test_blend_safetensors_checkpoints.py  (+36 more)
(+382 files in other folders)
