[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-forge"
version = "0.1.0"
description = "Reusable post-training pipelines for fine-tuning, abliteration, and evaluation of open models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.23",
  "psutil>=5.9",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
artifacts = [
  "playwright>=1.45",
]
external = [
  "immutabledict>=4.2",
  "inspect-ai>=0.3",
  "langdetect>=1.0.9",
  "lighteval>=0.10",
  "lm-eval>=0.4",
]
abliteration = [
  "accelerate>=0.34",
  "safetensors>=0.4",
  "torch>=2.5",
  "transformers>=4.46",
]
finetuning = [
  "accelerate>=0.34",
  "bitsandbytes>=0.44",
  "datasets>=2.20",
  "peft>=0.12",
  "safetensors>=0.4",
  "torch>=2.5",
  "transformers>=4.46",
  "trl>=0.12",
]

[project.scripts]
model-forge-eval = "model_forge.evals.run_eval:main"
model-forge-compare = "model_forge.evals.compare_runs:main"
model-forge-golden-summary = "model_forge.evals.golden_summary:main"
model-forge-promote = "model_forge.evals.promotion:main"
model-forge-matrix = "model_forge.evals.run_matrix:main"
model-forge-external = "model_forge.evals.external:main"
model-forge-abliterate = "model_forge.pipelines.abliterate:main"
model-forge-finetune = "model_forge.pipelines.finetune:main"
model-forge-data = "model_forge.data.factory:main"
model-forge-objectives = "model_forge.objectives:main"
model-forge-roadmap = "model_forge.roadmap:main"
model-forge-research = "model_forge.research.registry:main"
model-forge-hub = "model_forge.hub.cli:entrypoint"
model-forge-variants = "model_forge.variants.cli:main"
model-forge-manifest = "model_forge.runs.manifest:main"
model-forge-artifacts = "model_forge.artifacts.validate:entrypoint"
model-forge-cluster = "model_forge.cluster.cli:main"
model-forge-upstream = "model_forge.upstream:main"
model-forge-bench-serve = "model_forge.benchmarks.serve:main"
model-forge-bench-kernel = "model_forge.benchmarks.kernel:main"
model-forge-bench-sweep = "model_forge.benchmarks.sweep:main"
model-forge-quantize = "model_forge.quantization.cli:main"
model-forge-doctor = "model_forge.doctor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
